--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
 <link rel="stylesheet" href="alienArmada.css">
 <!-- Звуки -->
 <audio id="music">
-	<source src="../sounds/music.wav" type="audio/wav" loop>
+	<source src="music.wav" type="audio/wav" loop>
 </audio>
 <audio id="shootSound">
-	<source src="../sounds/shoot.wav" type="audio/wav">
+	<source src="shoot.wav" type="audio/wav">
 </audio>
 <audio id="explosionSound">
-	<source src="../sounds/explosion.wav" type="audio/wav">
+	<source src="explosion.wav" type="audio/wav">
 </audio>
 <!— Холст -->
 <canvas width="512" height="320"></canvas>
 <!—Код игры -->
-<script src="../src/objects.js"></script>
-<script src="../src/collision.js"></script>
-<script src="../src/alienArmadaFinished.js"></script>
+<script src="objects.js"></script>
+<script src="collision.js"></script>
+<script src="alienArmadaFinished.js"></script>
